// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/actions/ActionStatutBadge Barre 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey625 bg-white border border-grey925 line-through"
  data-test="ActionStatutBadge"
>
  Non renseigné
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Detaille 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-bf500 bg-bf925"
  data-test="ActionStatutBadge"
>
  Détaillé
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Fait 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-[#18753C] bg-[#B8FEC9]"
  data-test="ActionStatutBadge"
>
  Fait
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Non Concerne 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey425 bg-[#EEEEEE]"
  data-test="ActionStatutBadge"
>
  Non concerné
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Non Renseigne 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey625 bg-white border border-grey925"
  data-test="ActionStatutBadge"
>
  Non renseigné
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Pas Fait 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-error425 bg-[#FFE9E9]"
  data-test="ActionStatutBadge"
>
  Pas fait
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Programme 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-tDefaultInfo bg-[#E8EDFF]"
  data-test="ActionStatutBadge"
>
  Programmé
</span>
`;

exports[`Storyshots ui/shared/actions/ActionStatutBadge Small 1`] = `
<span
  className="w-max py-0.5 px-2 font-bold text-sm uppercase whitespace-nowrap rounded-md text-grey625 bg-white border border-grey925 !text-xs !px-1"
  data-test="ActionStatutBadge"
>
  Non renseigné
</span>
`;
